--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 }
 
 * {
-	font-family: Inter, Arial, sans-serif !important;
+	font-family: Inter, Arial, "Malgun Gothic", "맑은 고딕", sans-serif !important;
 }
 
 body .pzp-pc .pzp-pc__volume-slider {
